# Neural_Network_from_Scratch_in_C_Plus_Plus

./: CMakeLists.txt  README.md
include/: neural_network.h
output/: neural_network_app
src/: main.cpp
